--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,10 +13,9 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.4",
     "formik": "^2.2.9",
-    "mobx": "^6.3.3",
-    "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-redux": "^7.1.21",
     "@types/styled-components": "^5.1.14"
   }
 }
